[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex = "1.10.2"
parse-display = "0.8.2"
aoc-parse = "0.2.17"
itertools = "0.12.0"
rayon = "1.8.0"